--- a/bash/config
+++ b/bash/config
@@ -38,4 +38,4 @@ BMAGENTA='\e[45m'
 BCYAN='\e[46m'
 BWHITE='\e[47m'
 
-PS1="\n\u:\w \[$EBLUE\]\$(vcprompt)\[$NO_COLOR\] $ "
+PS1="\n\u:\w \[$GREEN\]\$(vcprompt)\[$NO_COLOR\] $ "
