now using rvm and git prompt on command line prompt

--- a/bash/config
+++ b/bash/config
@@ -38,4 +38,8 @@ BMAGENTA='\e[45m'
 BCYAN='\e[46m'
 BWHITE='\e[47m'
 
-PS1="\n\u:\w \[$GREEN\]\$(vcprompt)\[$NO_COLOR\] $ "
+GIT_PS1_SHOWDIRTYSTATE="yes_please"
+GIT_PS1_SHOWSTASHSTATE="yes_please"
+GIT_PS1_SHOWUNTRACKEDFILES="yes_please"
+GIT_PS1_SHOWUPSTREAM="auto"
+PS1="\n\[\033[01;32m\]\w\[\033[00;33m\]\$(__git_ps1 \" (%s)\") \[\033[01;36m\]\[\033[01;34m\]\$(~/.rvm/bin/rvm-prompt) \$\[\033[00m\] "
