--- a/bash/config
+++ b/bash/config
@@ -42,4 +42,5 @@ GIT_PS1_SHOWDIRTYSTATE="yes_please"
 GIT_PS1_SHOWSTASHSTATE="yes_please"
 GIT_PS1_SHOWUNTRACKEDFILES="yes_please"
 GIT_PS1_SHOWUPSTREAM="auto"
-PS1="\n\[\033[01;32m\]\w\[\033[00;33m\]\$(__git_ps1 \" (%s)\") \[\033[01;36m\]\[\033[01;34m\]\$(~/.rvm/bin/rvm-prompt) \$\[\033[00m\] "
+
+PS1="\n\[\e[0;37m\]\w\[\e[0;32m\]$(__git_ps1 " (%s)") \[\e[0;31m\]$(~/.rvm/bin/rvm-prompt) \[\e[0;37m\]$ "
