--- a/bash/config
+++ b/bash/config
@@ -43,4 +43,4 @@ GIT_PS1_SHOWSTASHSTATE="yes_please"
 GIT_PS1_SHOWUNTRACKEDFILES="yes_please"
 GIT_PS1_SHOWUPSTREAM="auto"
 
-PS1="\n\[\033[0;37m\]\w\[\033[0;32m\]\$(__git_ps1 \" (%s)\") \[\033[0;36m\]\[\033[0;31m\]\$(~/.rvm/bin/rvm-prompt) \$\[\033[00m\] "
+PS1="\n\[$WHITE\]\w\[$GREEN\]\$(__git_ps1 \" (%s)\") \[$CYAN\]\[$RED\]\$(~/.rvm/bin/rvm-prompt) \[$WHITE\]\$ "
