--- a/git/config
+++ b/git/config
@@ -11,3 +11,5 @@
 [alias]
         st = status
         hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+[push]
+	default = simple
