Change push setting

--- a/git/config
+++ b/git/config
@@ -12,4 +12,4 @@
         st = status
         hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
 [push]
-	default = simple
+	default = tracking
