Add git 'sts' alias -- short status.

--- a/git/config
+++ b/git/config
@@ -10,6 +10,7 @@
 	safecrlf = false
 [alias]
         st = status
+        sts = status --short
         hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
 [push]
 	default = tracking
