--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,4 @@
 unbind C-b
-set -g prefix C-@
-bind C-@ send-prefix
+set -g prefix C-]
+bind C-] send-prefix
+set -g default-terminal "screen-256color"
