--- a/tmux.conf
+++ b/tmux.conf
@@ -38,11 +38,20 @@ bind L resize-pane -R 5
 # Sometimes, it's okay to use the mouse
 set -g mouse on
 
+# Cut and paste!
+setw -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
 # Use color
 set -g default-terminal "tmux-256color"
 
 # Color the status line
-set -g status-style fg=white,bg=blue
+set -g status-style fg=white,bg=green
 
 # Show active window
 setw -g window-status-current-style fg=white,bg=red
@@ -54,4 +63,8 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'arcticicestudio/nord-tmux'
+
+run '~/.tmux/plugins/tpm/tpm'
