--- a/tmux.conf
+++ b/tmux.conf
@@ -15,49 +15,14 @@ set -g pane-base-index 1
 # Reload tmux config shortcut
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# More intuitive pane splitting
-bind | split-window -h
-bind - split-window -v
-
-# More intuitive pane navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# More intuitive window navigation
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# More intuitive pane resizing
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
-
 # Sometimes, it's okay to use the mouse
 set -g mouse on
 
-# Cut and paste!
-setw -g mode-keys vi
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
-
-# Use color
-set -g default-terminal "tmux-256color"
-
 # Color the status line
-set -g status-style fg=white,bg=green
+set -g status-style fg=white,bg=colour22
 
 # Show active window
-setw -g window-status-current-style fg=white,bg=red
-
-# Center the window list
-set -g status-justify centre
+setw -g window-status-current-style fg=white,bg=colour26
 
 # Enable activity alerts
 setw -g monitor-activity on
@@ -65,6 +30,9 @@ set -g visual-activity on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
