--- a/tmux.conf
+++ b/tmux.conf
@@ -34,5 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized 'dark'
 
 run -b '~/.tmux/plugins/tpm/tpm'
