Updates to tmux, vim, zsh

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,6 +34,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @open-S 'https://www.duckduckgo.com/'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-save-shell-history 'on'
+set -g @resurrect-processes '"~emacs->emacs . &"'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-boot 'on'
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @colors-solarized 'dark'
 
