--- a/tmux.conf
+++ b/tmux.conf
@@ -18,12 +18,34 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # Sometimes, it's okay to use the mouse
 set -g mouse on
 
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour18 fg=colour137 dim'
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+
+setw -g window-status-style 'fg=colour9 bg=colour18'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour232 bg=colour16 bold'
+
 # Show active window
-setw -g window-status-current-style fg=white,bg=colour26
+# setw -g window-status-current-style fg=white,bg=colour26
 
 # Enable activity alerts
 setw -g monitor-activity on
 set -g visual-activity on
+
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
