Add vim <==> tmux navigation; add full nvim config.

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,5 +57,6 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @open-S 'https://www.duckduckgo.com/'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-save-shell-history 'on'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run -b '~/.tmux/plugins/tpm/tpm'
