--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,9 @@ unbind C-b
 # Be able to send CTRL-a to apps inside tmux; Press CTRL-a twice.
 bind C-a send-prefix
 
+# set -g mode-keys vi
+# set -g @yank_selection 'unnamed'
+
 # Make the delay more responsive
 set -s escape-time 1
 
