--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -61,5 +61,6 @@ set -g @open-S 'https://www.duckduckgo.com/'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-save-shell-history 'on'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-logging'
 
 run -b '~/.tmux/plugins/tpm/tpm'
