--- a/dotfiles/config/nvim/coc-settings.json
+++ b/dotfiles/config/nvim/coc-settings.json
@@ -1,3 +1,9 @@
 {
-  "python.jediEnabled": false
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript", "python", "typescript"
+  ],
+  "python.jediEnabled": false,
+  "python.linting.lintOnSave": true,
+  "python.linting.pylintEnabled": true,
+  "python.formatting.provider": "black"
 }
