--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -25,7 +25,8 @@ set -g mouse on
 setw -g monitor-activity on
 set -g visual-activity on
 
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -g  default-terminal 'tmux-256color'
+set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -35,11 +36,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @open-S 'https://www.duckduckgo.com/'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-save-shell-history 'on'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'basic'
+set -g @plugin 'tombin/apprentice-tmux'
 
 run -b '~/.tmux/plugins/tpm/tpm'
