--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Kevin Beam
-	email = kbeam@nsidc.org
+	name = Kevin W. Beam
+	email = kwbeam@fastmail.com
 [color]
 	ui = auto
 [apply]
